--- a/NoSQL_analysis_starter.ipynb
+++ b/NoSQL_analysis_starter.ipynb
@@ -18,19 +18,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3ecdd008",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import dependencies\n",
     "from pymongo import MongoClient\n",
-    "from pprint import pprint"
+    "from pprint import pprint\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "59390c4a",
    "metadata": {},
    "outputs": [],
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "71e373c1",
    "metadata": {},
    "outputs": [],
@@ -52,17 +53,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "18ab463c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
-    "# review the collections in our database\n"
+    "# review the collections in our database\n",
+    "print(db.list_collection_names())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "11c9f11b",
    "metadata": {},
    "outputs": [],
@@ -93,31 +103,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "c2da7648",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of documents with a hygiene score of 20 is: 0\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "# Find the establishments with a hygiene score of 20\n",
-    "query =\n",
+    "query1 = {'scores.Hygiene': {'$eq': 20}}\n",
     "\n",
     "# Use count_documents to display the number of documents in the result\n",
+    "print(\"The number of documents with a hygiene score of 20 is:\", establishments.count_documents(query1))\n",
     "\n",
-    "# Display the first document in the results using pprint\n"
+    "# Display the first document in the results using pprint\n",
+    "pprint(db.establishments.find_one(query1))\n",
+    "\n",
+    "# Run the query as a list and save the results to a variable\n",
+    "results1 = list(establishments.find(query1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "a6e5cece",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rows in DataFrame:  0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Convert the result to a Pandas DataFrame\n",
+    "query1_df = pd.DataFrame(results1)\n",
     "\n",
     "# Display the number of rows in the DataFrame\n",
+    "print(\"Rows in DataFrame: \", len(query1_df))\n",
     "\n",
-    "# Display the first 10 rows of the DataFrame\n"
+    "# Display the first 10 rows of the DataFrame\n",
+    "query1_df.head(10)"
    ]
   },
   {
@@ -130,35 +203,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "93c63829",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of establishments in London with a RatingValue greater than/equal to 4 is: 0\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "# Find the establishments with London as the Local Authority and has a RatingValue greater than or equal to 4.\n",
-    "query =\n",
+    "query2 = {'LocalAuthorityName': {'$regex': 'London'}, \n",
+    "         'RatingValue': {'$gte': '4'}}\n",
     "\n",
     "# Use count_documents to display the number of documents in the result\n",
+    "print(\"The number of establishments in London with a RatingValue greater than/equal to 4 is:\", establishments.count_documents(query2))\n",
     "\n",
-    "# Display the first document in the results using pprint\n"
+    "# Display the first document in the results using pprint\n",
+    "pprint(db.establishments.find_one(query2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "07e24ccb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rows in DataFrame:  0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "# Run the query as a list and save the results to a variable\n",
+    "results2 = list(establishments.find(query2))\n",
+    "\n",
     "# Convert the result to a Pandas DataFrame\n",
+    "query2_df = pd.DataFrame(results2)\n",
     "\n",
     "# Display the number of rows in the DataFrame\n",
+    "print(\"Rows in DataFrame: \", len(query2_df))\n",
     "\n",
-    "# Display the first 10 rows of the DataFrame\n"
+    "# Display the first 10 rows of the DataFrame\n",
+    "query2_df.head(10)"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "4e570caf",
    "metadata": {},
@@ -168,33 +304,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "7f599f3d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "# Search within 0.01 degree on either side of the latitude and longitude.\n",
     "# Rating value must equal 5\n",
     "# Sort by hygiene score\n",
     "\n",
+    "# Change the data type from String to Decimal for latitude\n",
+    "lat_type = establishments.update_many({}, [\n",
+    "                                                {'$set':\n",
+    "                                                        {\"geocode.latitude\":\n",
+    "                                                            {'$toDecimal': \"$geocode.latitude\"}\n",
+    "                                                        }\n",
+    "                                                }\n",
+    "                                            ]\n",
+    "                                      )\n",
+    "\n",
+    "# Change the data type from String to Decimal for longitude\n",
+    "long_type = establishments.update_many({}, [\n",
+    "                                                {'$set':\n",
+    "                                                        {\"geocode.longitude\":\n",
+    "                                                            {'$toDecimal': \"$geocode.longitude\"}\n",
+    "                                                        }\n",
+    "                                                }\n",
+    "                                            ]\n",
+    "                                      )\n",
+    "\n",
+    "# Define the variables\n",
     "degree_search = 0.01\n",
-    "latitude = \n",
-    "longitude = \n",
+    "latitude = 51.49014200\n",
+    "longitude = 0.08384000\n",
     "\n",
-    "query = \n",
-    "sort =  \n",
+    "query3 = {'geocode.latitude': {'$gte': latitude - degree_search, '$lte': latitude + degree_search}, \n",
+    "         'geocode.longitude': {'$gte': longitude - degree_search, '$lte': longitude + degree_search},\n",
+    "         'RatingValue': '4'\n",
+    "        }\n",
     "\n",
-    "# Print the results\n"
+    "# Sort by hygiene score\n",
+    "sort = [('scores.Hygiene', -1)]\n",
+    "\n",
+    "# Limit to top 5 establoshments\n",
+    "limit = 5\n",
+    "\n",
+    "# Print the results\n",
+    "pprint(list(establishments.find(query3).sort(sort).limit(limit)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "a6ad16f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rows in DataFrame:  0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Convert result to Pandas DataFrame\n"
+    "# Run the query as a list and save the results to a variable\n",
+    "results3 = list(establishments.find(query3).sort(sort).limit(limit))\n",
+    "\n",
+    "# Convert result to Pandas DataFrame\n",
+    "query3_df = pd.DataFrame(results3)\n",
+    "\n",
+    "# Display the number of rows in the DataFrame\n",
+    "print(\"Rows in DataFrame: \", len(query3_df))\n",
+    "\n",
+    "# Display the first 10 rows of the DataFrame\n",
+    "query3_df.head(10)"
    ]
   },
   {
@@ -207,41 +437,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "4eeb227e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of establishments in each Local Authority area have a hygiene score of 0 in result:  0\n",
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a pipeline that: \n",
     "# 1. Matches establishments with a hygiene score of 0\n",
+    "match_query = {'$match': {'scores.Hygiene': {'$eq': 0}}}\n",
+    "\n",
     "# 2. Groups the matches by Local Authority\n",
+    "group_query = {'$group': {'_id': \"$LocalAuthorityName\", 'count': { '$sum': 1 }}}\n",
+    "\n",
     "# 3. Sorts the matches from highest to lowest\n",
+    "sort_values = {'$sort': { 'count': -1 }}\n",
+    "\n",
+    "# Put the pipeline together\n",
+    "pipeline = [match_query, group_query, sort_values]\n",
+    "\n",
+    "# Run the pipeline through the aggregate method, cast the results as a list, and save the results to a variable\n",
+    "results4 = list(establishments.aggregate(pipeline))\n",
     "\n",
     "# Print the number of documents in the result\n",
+    "print(\"Number of establishments in each Local Authority area have a hygiene score of 0 in result: \", len(results4))\n",
     "\n",
-    "# Print the first 10 results\n"
+    "# Print the first 10 results\n",
+    "pprint(results4[0:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "d8aab364",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rows in DataFrame:  0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Convert the result to a Pandas DataFrame\n",
+    "results4_df = pd.DataFrame(results4)\n",
+    "\n",
+    "# Display the number of rows in the DataFrame\n",
+    "print(\"Rows in DataFrame: \", len(results4_df))\n",
+    "\n",
+    "# Display the first 10 rows of the DataFrame\n",
+    "results4_df.head(10)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8aab364",
+   "id": "b792d2c0",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Convert the result to a Pandas DataFrame\n",
-    "\n",
-    "# Display the number of rows in the DataFrame\n",
-    "\n",
-    "# Display the first 10 rows of the DataFrame\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "dev",
    "language": "python",
-   "name": "python3"
+   "name": "dev"
   },
   "language_info": {
    "codemirror_mode": {
@@ -253,7 +562,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
